sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: Invalid literal number
  for (i<-2to getNombreValeurs()-1){
          ^AlgInsertionSort:5: error: illegal start of simple expression
  for (i<-2to getNombreValeurs()-1){
          ^AlgInsertionSort:16: error: ')' expected but '}' found.
} 
^